# tools-music-downloader

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  download.py  music_download.py  pyproject.toml  requirements-build-constraints.txt  requirements-build.txt  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-06-26-desktop-gui-plan.md  2026-06-30-enhanced-core-gui-refactor.md  2026-07-02-vite-svelte-gui-refactor.md  2026-07-06-cli-help-details.md  2026-07-10-build-script-optimization.md  2026-07-12-focus-state-refinement.md  2026-07-12-gui-progressive-covers.md  2026-07-12-gui-visual-polish.md  2026-07-12-headless-chrome-window-regression.md  2026-07-12-music-workbench-frontend.md  2026-07-12-search-result-duration-fix.md  2026-07-13-readme-gui-previews.md  2026-07-13-source-catalog-and-reliability.md
docs/superpowers/specs/: 2026-06-26-desktop-gui-design.md  2026-06-30-enhanced-core-gui-refactor-design.md  2026-07-02-vite-svelte-gui-refactor-design.md  2026-07-06-cli-help-details-design.md  2026-07-10-build-script-optimization-design.md  2026-07-12-focus-state-refinement-design.md  2026-07-12-gui-progressive-covers-design.md  2026-07-12-headless-chrome-window-regression-design.md  2026-07-12-music-workbench-frontend-design.md  2026-07-12-search-result-duration-fix-design.md  2026-07-13-readme-gui-previews-design.md  2026-07-13-source-catalog-and-reliability-design.md
music_downloader/: __init__.py  __main__.py  api.py  cli.py  config.py  console.py  display.py  downloader.py  env.py  metadata.py  models.py  utils.py
music_downloader/adapters/: __init__.py
music_downloader/adapters/cli/: __init__.py  app.py  display.py  interactive.py  legacy.py
music_downloader/cli/: __init__.py  app.py  display.py  interactive.py  models.py  selection.py  workflow.py
music_downloader/core/: __init__.py  config.py  console.py  runtime.py
music_downloader/domain/: __init__.py  enums.py  errors.py  formatting.py  models.py
music_downloader/gui/: __init__.py  api.py  app.py  bridge.py  settings.py
music_downloader/gui/frontend/: index.html  package-lock.json  package.json  svelte.config.ts  tsconfig.json  vite.config.ts
music_downloader/gui/static/: index.html
music_downloader/infrastructure/: __init__.py  browser.py  downloader.py  encoding.py  environment.py  files.py  gdstudio.py  metadata.py  tags.py
music_downloader/services/: __init__.py  download.py  search.py
scripts/: build_exe.ps1  git-fixup.py
tests/: test_api.py  test_build_script.py  test_cli.py  test_cli_adapter.py  test_cli_app.py  test_display.py  test_domain_models.py  test_download_service.py  test_downloader.py  test_env.py  test_environment_checks.py  test_file_rules.py  test_gui_app.py  test_gui_bridge.py  test_gui_close.py  test_gui_covers.py  test_gui_documentation.py  test_gui_settings.py  test_gui_static.py  test_imports.py  test_metadata.py  test_metadata_semantics.py  test_package_structure.py  test_search_service.py  test_service_integration.py  test_utils.py
(+51 files in other folders)
