[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tools-music-downloader"
version = "0.1.0"
description = "命令行音乐搜索下载工具，数据来源为 music.gdstudio.org"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["music", "downloader", "netease", "playwright"]
authors = [
    { name = "tools-music-downloader contributors" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = ["-p", "no:cacheprovider"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# RUF 全量关闭：本项目大量中文文案/注释，全角标点（，。（）：；）属于合理用法，
# 强行让 ruff 提示是误报。
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
